# xml-syntax-reader

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: classify.rs  encoding.rs  lib.rs  reader.rs  state.rs  types.rs  visitor.rs
src/bitstream/: avx2.rs  mod.rs  neon.rs  scalar.rs  sse2.rs
tests/: reader_tests.rs
